syntax = "proto3";

package rivet.backend.pkg.mm.msg.lobby_history_export;

import "legacy/proto/common.proto";

/// name = "msg-mm-lobby-history-export"
/// parameters = [
/// 	{ name = "request_id" },
/// ]
message Message {
	rivet.common.Uuid request_id = 1;
	repeated rivet.common.Uuid namespace_ids = 2;
	int64 query_start = 3;
	int64 query_end = 4;
}

